--- a/blog/config.json
+++ b/blog/config.json
@@ -1,25 +1,18 @@
 {
-    "title": "ZENGGO",
+    "title": "zenggo",
     "description": "BLOG",
-    "logo": "/upload/logo.svg",
     "favicon": "favicon-32x32.png",
     "navigation": [
       {
-        "text": "Home",
-        "link": "/",
-        "position": "left",
-        "external": false
-      },
-      {
         "text": "Github",
         "link": "https://github.com/zenggo",
-        "position": "left",
+        "position": "right",
         "external": true
       },
       {
         "text": "Blog",
         "link": "/post/",
-        "position": "right",
+        "position": "left",
         "external": false
       }
     ]
