--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
   },
   "author": "zenggo",
   "license": "MIT",
-  "dependencies": {
-    "vuepress": "^1.5.4",
-    "webpack-dev-middleware": "3.7.2"
-  },
   "devDependencies": {
+    "vuepress": "^1.5.4",
+    "webpack-dev-middleware": "3.7.2",
     "vuepress-plugin-comment": "^0.7.3"
   }
 }
